--- a/styles/bootstyles.css
+++ b/styles/bootstyles.css
@@ -28,3 +28,22 @@ h1{
     color: white;
     font-family: cursive;
 }
+
+p{
+    color: white;
+    text-align: center;
+    font-size: larger;
+    font-family: cursive ;
+}
+
+.nav-item {
+    font-family: cursive;
+}
+
+footer{
+    background-color: rgb(250, 159, 149);
+    text-align: center;
+    font-family: monospace;
+    padding: 20px;
+    color:white
+}
